Allow reloading the return page if the callback hasn't finished

--- a/Koha/Plugin/Com/BibLibre/EasyPayments/opac_online_payment_end.tt
+++ b/Koha/Plugin/Com/BibLibre/EasyPayments/opac_online_payment_end.tt
@@ -30,6 +30,9 @@
                         [% ELSIF message == 'no_amount' %]
                             <p>No amount was passed in!</p>
                             <p>Please contact a librarian for details.</p>
+                        [% ELSIF message == 'no_payment' %]
+                            <p>Payment information not received yet.</p>
+                            <p>Please <a href="[% reload %]">reload</a> to check again.</p>
                         [% ELSE %]
                             <p>Unkown error.</p>
                             <p>Please contact a librarian for details.</p>
