--- a/Koha/Plugin/Com/BibLibre/EasyPayments/configure.tt
+++ b/Koha/Plugin/Com/BibLibre/EasyPayments/configure.tt
@@ -117,9 +117,42 @@
                 return this.optional(element) || new RegExp("^" + params + "[0-9a-f]{32}$").test(value);
             }, jQuery.validator.format("Please enter the full key with the {0} prefix"));
             $("#mainform").validate({
+                messages: {
+                    enable_opac_payments: "Cannot be enabled without the plugin's API. Please restart webserver."
+                },
                 rules: {
                     enable_opac_payments: {
-                        api: "[% message %]"
+                        api: "[% message %]",
+                        remote: {
+                            depends: function(element) {
+                                return $("#payment_provider").val() == "easy" && $("#enable_opac_payments").val() == 1;
+                            },
+                            param: {
+                                beforeSend: function(jqXHR, settings) {
+                                    settings.data = '{"event": "api.test"}';
+                                },
+                                dataFilter: function(data, type) {
+                                    return true;
+                                },
+                                error: function(jqXHR, textStatus, errorThrown){
+                                    valid = false;
+                                    validator = $(this).validate();
+                                    element = $('#enable_opac_payments')[0];
+                                    method = "remote";
+                                    previous = validator.previousValue(element, method);
+                                    validator.settings.messages[ element.name ][ method ] = previous.originalMessage;
+                                    validator.invalid[ element.name ] = true;
+                                    errors = {};
+                                    message = validator.defaultMessage( element, { method: method } );
+                                    errors[ element.name ] = previous.message = message;
+                                    validator.showErrors( errors );
+                                    previous.valid = valid;
+                                    validator.stopRequest(element, valid);
+                                },
+                                type: "post",
+                                url: "[% api_url %]"
+                            }
+                        }
                     },
                     currency: {
                         rangelength: [3, 3],
