--- a/Koha/Plugin/Com/BibLibre/EasyPayments/opac_online_payment_begin.tt
+++ b/Koha/Plugin/Com/BibLibre/EasyPayments/opac_online_payment_begin.tt
@@ -10,21 +10,29 @@
 [% INCLUDE 'masthead.inc' %]
 
 <div class="main">
-    <ul class="breadcrumb">
-        <li><a href="/cgi-bin/koha/opac-main.pl">Home</a> <span class="divider">&rsaquo;</span></li>
-        <li>[% IF logged_in_user %]<a href="/cgi-bin/koha/opac-user.pl">[% INCLUDE 'patron-title.inc' patron = logged_in_user %]</a>[% END %] <span class="divider">&rsaquo;</span></li>
-        <li><a href="#">Your charges</a></li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ul class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="/cgi-bin/koha/opac-main.pl">Home</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="/cgi-bin/koha/opac-user.pl">[% INCLUDE 'patron-title.inc' patron = logged_in_user %]</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="#">Your charges</a>
+            </li>
+        </ul>
+    </nav>
 
     <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span2">
-                <div id="navigation">
-                    [% INCLUDE 'navigation.inc' IsPatronPage=1 %]
-                </div>
+        <div class="row">
+            <div class="col col-lg-2 order-2 order-lg-1">
+                 <div id="navigation">
+                     [% INCLUDE 'navigation.inc' IsPatronPage=1 %]
+                 </div>
             </div>
-            <div class="span10">
-                <div id="useraccount" class="maincontent">
+            <div class="col-md-12 col-lg-10 order-1">
+                 <div id="useraccount" class="maincontent">
                     [% easy_message | $raw %]
                 </div> <!-- / #useraccount -->
             </div> <!-- / .span10 -->
