--- a/Koha/Plugin/Com/BibLibre/EasyPayments/configure.tt
+++ b/Koha/Plugin/Com/BibLibre/EasyPayments/configure.tt
@@ -54,9 +54,9 @@
         <input type="text" name="currency" value="[% currency %]" size="3" />
         </li>
         <li>
-        <label for="payment_type">Payment type (requred if RequirePaymentType is set): </label>
+        <label for="payment_type">Payment type (required if RequirePaymentType is set): </label>
         <select id="payment_type" name="payment_type">
-            <option value=""></option>
+            <option value="">None</option>
             [% FOREACH p_type IN  AuthorisedValues.Get('PAYMENT_TYPE') %]
                 [% IF p_type.authorised_value == payment_type %]
                     <option value="[% p_type.authorised_value %]" selected="selected">[% p_type.lib %]</option>
